# CleanDiffuser

./: .gitignore  README.md  README_ZH.md  pred.py  pred_dataprocess.py  pyproject.toml  requirements.txt  setup.py
act/: policy.py
act/detr/: main.py
assets/: update0310.md
cleandiffuser/: __init__.py
cleandiffuser/classifier/: __init__.py  base.py  mse_classifier.py  qgpo_classifier.py  rew_classifiers.py
cleandiffuser/dataset/: base_dataset.py  block_push_dataset.py  d4rl_antmaze_dataset.py  d4rl_kitchen_dataset.py  d4rl_maze2d_dataset.py  d4rl_mujoco_dataset.py  dataset_utils.py  imagecodecs.py  kitchen_dataset.py  libero_dataset.py  pusht_dataset.py  replay_buffer.py  robomimic_dataset.py  robomimic_rl_dataset.py  rotation_conversions.py  toy2d_dataset.py
cleandiffuser/diffusion/: __init__.py  basic.py  basic_L.py  consistency_model.py  ddim.py  ddpm.py  diffusionsde.py  diffusionsde_L.py  dpmsolver.py  dpmsolver_discrete.py  edm.py  edm_L.py  edmddim.py  newedm.py  rectifiedflow.py  veode.py  vpode.py  vpsde.py
cleandiffuser/env/: README.md  utils.py  wrapper.py
cleandiffuser/invdynamic/: README.md  __init__.py  common.py  mlp.py  mlp_L.py  pretrain_on_d4rl.py
cleandiffuser/nn_classifier/: __init__.py  base_nn_classifier.py  half_dit.py  half_jannerunet.py  mlp.py
cleandiffuser/nn_condition/: __init__.py  base_nn_condition.py  dinov2_condition.py  dinov2_embodied.py  dp3_pointcloud_condition.py  mlp.py  (+11 more)
docker/: Dockerfile
notebooks/: 1_dbc_for_frankakitchen.ipynb  2_dd_for_d4rl_mujoco.ipynb  3_dql_for_d4rl_mujoco.ipynb  4_try_more_diffusion_backbones.ipynb
pipelines/: act_pusht.py  adaptdiffuser_d4rl.py  adaptdiffuser_d4rl_antmaze.py  adaptdiffuser_d4rl_kitchen.py  adaptdiffuser_d4rl_mujoco.py  dbc_kitchen.py  dbc_pusht.py  dbc_pusht_image.py  dbc_robomimic.py  dbc_robomimic_image.py  dd_d4rl.py  dd_d4rl_antmaze.py  dd_d4rl_kitchen.py  dd_d4rl_mujoco.py  diffuser_d4rl.py  diffuser_d4rl_antmaze.py  diffuser_d4rl_kitchen.py  diffuser_d4rl_maze2d.py  diffuser_d4rl_mujoco.py  diffuserlite_d4rl_antmaze.py  diffuserlite_d4rl_kitchen.py  diffuserlite_d4rl_mujoco.py  dp_kitchen.py  dp_pusht.py  dp_pusht_image.py  dp_robomimic.py  dp_robomimic_image.py  dql_d4rl.py  dql_d4rl_antmaze.py  dql_d4rl_kitchen.py  dql_d4rl_mujoco.py  edp_d4rl.py  edp_d4rl_antmaze.py  edp_d4rl_kitchen.py  edp_d4rl_mujoco.py  idql_d4rl.py  idql_d4rl_antmaze.py  idql_d4rl_kitchen.py  idql_d4rl_mujoco.py  qgpo_d4rl.py  (+13 more)
requirements/: req_il.txt  req_rl.txt  req_tutorials.txt
scripts/: dd_d4rl.sh  diffuser_d4rl.sh  dql_d4rl.sh  edp_d4rl.sh  idql_d4rl.sh  sfbc_d4rl.sh
tests/: test_all_classifier.py  test_all_nn_classifier.py  test_chi_transformer.py  test_chi_unet.py  test_d4rl_envs.py  test_diffusion_sde.py  test_dit.py  test_dql_mlp.py  test_idql_mlp.py  test_janner_unet.py  test_kitchen_datasets.py  test_kitchen_envs.py  test_mlps.py  test_pearce_mlp.py  test_pearce_transformer.py  test_pusht_datasets.py  test_pusht_envs.py  test_robomimic_env.py  test_sfbc_unet.py  test_transform.py
tutorials/: 1_a_minimal_DBC_implementation.ipynb  1_a_minimal_DBC_implementation.py  2_classifier-free_guidance.py  2_classifier_free_guidance.ipynb  3_classifier_guidance.py  4_customize_your_diffusion_network_backbone.py  sp_consistency_policy.py
unstable_pipeline/: dbc_kitchen_old.py  dbc_pusht.py  dbc_robomimic.py  dbc_robomimic_image.py  dp_robomimic.py
(+380 files in other folders)
