[project]
name = "CleanDiffuser"
dynamic = ["version"]
description = "CleanDiffuser: An Easy-to-use Modularized Library for Diffusion Models in Decision Making"
authors = [{ name = "CleanDiffuserTeam" }]
dependencies = ["numpy<1.23.0", "einops", "torch>=2"]
readme = "README.md"
requires-python = ">= 3.8"
keywords = ["reinforcement learning", "pytorch", "diffuser"]
# license = "Apache-2.0"

[project.urls]
Homepage = "https://cleandiffuserteam.github.io/CleanDiffuserDocs/"
Repository = "https://github.com/CleanDiffuserTeam/CleanDiffuser"

[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = [
    "setuptools>=69.5.1",
    "setuptools_scm>=8.1.0",
    "wheel>=0.43.0",
]

[tool.setuptools_scm]
write_to = "cleandiffuser/_version.py"
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.setuptools.packages.find]
# where = ["src"]
include = ["cleandiffuser"]
